# pranav-kuchibhotla-expense-tracking

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  build.gradle  compose.override.yaml  compose.profiles.yaml  compose.yaml  mcp.json  pom.xml  settings.gradle  template.yaml
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: _build-and-push.yml  _bump-config.yml  ci.yml  compose-ci.yml  deploy-prod.yml  docker.yml  expense_agent_svc-ci.yml  expense_mcp_server-ci.yml  k8s-ci.yml  load.yml  observability.yml  python-ci.yml  serverless.yml  web-ci.yml
.grafana/dashboards/: expense-api-red.json
db/: README.md  V1__schema.sql  V2__seed.sql  verify.sql
db/queries/: README.md  cte.sql  group_by_having.sql  joins.sql  window.sql
envs/: expense.env.example
events/: get-merchant.json
expense-agent-svc/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  PROMPT_JOURNAL.md  README.md  RUNBOOK.md  pyproject.toml
expense-agent-svc/argo-apps/: expense-agent-svc.yaml
expense-agent-svc/cfn/: agent-svc-budget.yaml
expense-agent-svc/docs/evidence/: w7d5-static-validation.md
expense-agent-svc/evals/: __init__.py  last_run.json  scenarios.jsonl  trajectory.py
expense-agent-svc/gitops/base/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml
expense-agent-svc/gitops/overlays/prod/: kustomization.yaml
expense-agent-svc/scripts/: bump_config_image.py  ecr_preflight.sh
expense-agent-svc/src/expense_agent_svc/: __init__.py  app.py  budgets.py  dependencies.py  graph.py  runtime.py  sampling.py  settings.py  sse.py  state.py
expense-agent-svc/src/expense_agent_svc/nodes/: __init__.py  _deadline.py  api.py  retrieval.py  synthesis.py
expense-agent-svc/src/expense_agent_svc/scripts/: __init__.py  eval.py
expense-agent-svc/tests/: test_api_node.py  test_app.py  test_budget_guard.py  test_checkpointer_resume.py  test_ci_workflow.py  test_deadline.py  test_dependencies.py  test_deployment_artifacts.py  test_graph_compile.py  test_recursion_limit.py  test_retrieval_node.py  test_runtime.py  test_sampling.py  test_settings.py  test_sse.py  test_state_reducers.py  test_supervisor.py  test_synthesis_node.py  test_trajectory_eval.py
expense-ai/: .env.example  .gitignore  PROMPT_JOURNAL.md  PYTHON.md  pyproject.toml
expense-ai/docs/evidence/: w7d2-static-validation.md  w7d3-static-validation.md
expense-ai/docs/ragas/: w7d3.md
expense-ai/sql/: V001__doc_chunks.sql  V002__rag2_metadata_and_partial_indexes.sql
expense-ai/src/expense_ai/: __init__.py  cache.py  chunker.py  cli.py  client.py  corpus.py  hybrid.py  models.py  pgvector_loader.py  rag.py  rerank.py  settings.py  value_types.py
expense-ai/src/expense_ai/dags/: __init__.py  rag_svc_ingest.py
expense-ai/src/expense_ai/scripts/: __init__.py  assert_langsmith_run_visible.py
expense-ai/tests/: _pg_wait.py  _schema.py  conftest.py  test_airflow_dag_import.py  test_chunker.py  test_cli.py  test_client.py  test_corpus.py  test_great_expectations_suite.py  test_hybrid_rrf.py  test_models.py  test_pgvector_helpers.py  test_pgvector_loader.py  test_pgvector_rag_rows.py  test_rag_traceable.py  test_ragas_gate.py  test_ragas_thresholds.py  test_rerank.py  test_retrieve_and_generate.py  test_semantic_cache.py  test_settings.py  test_tenant_isolation.py  test_value_types.py
expense-ai/tests/fixtures/: corpus_seed.jsonl  merchant_java.json
expense-ai/tests/golden/: expense_golden_50.jsonl
expense-api/: .dockerignore  .hadolint.yaml  .trivyignore  COST.md  Dockerfile  GITOPS.md  SRE-CAPSTONE.md  build.gradle
expense-api/.github/: PIPELINE.md
expense-api/docker/: SECURITY.md  SIZE.md  healthcheck.go
expense-api/docs/evidence/: w6d4-alarm-drill.md  (+2 more)
expense-api/loadtests/: expense-api-p99.js
expense-api/scripts/: llm-cost-spike.sh  w6d5-integration-spike.sh
expense-mcp-server/: .env.example  .gitignore  Dockerfile  PROMPT_JOURNAL.md  README.md  mcp.json  pyproject.toml
expense-mcp-server/configs/: claude_desktop_config.json
expense-mcp-server/docs/evidence/: w7d4-static-validation.md
expense-mcp-server/src/expense_mcp_server/: __init__.py  app.py  auth.py  errors.py  jwt_verifier.py  settings.py  telemetry.py
expense-mcp-server/src/expense_mcp_server/scripts/: __init__.py  replay.py
expense-mcp-server/src/expense_mcp_server/tools/: __init__.py  _resources.py  llm.py  orders.py  rag.py  schemas.py
expense-mcp-server/src/expense_mcp_server/transports/: __init__.py  _registry.py  sse.py  stdio.py
expense-mcp-server/tests/: test_e2e_mcp_to_spring.py  test_errors.py  test_lifespan_and_telemetry.py  test_llm_tool.py  test_orders_tools.py  test_rag_tool.py  test_replay.py  test_resources.py  test_schemas.py  test_smoke_stdio.py  test_sse_auth.py  test_tool_descriptions.py
expense-mcp-server/tests/fixtures/: llm_chat_1.json  orders_create_refund_1.json  orders_get_order_1.json  orders_get_order_2.json  rag_answer_1.json
expense-web/: .env.example  .gitignore  PROMPT_JOURNAL.md  codegen.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  schema.graphql  tsconfig.json  tsconfig.server.json  vitest.config.ts
expense-web/e2e/: global-setup.ts  merchant-chat.spec.ts
expense-web/server/: index.ts
expense-web/src/: App.tsx  main.tsx  router.tsx
manifests/: 00-namespace.yaml  10-expense-api.deployment.yaml  20-expense-api.service.yaml  30-expense-api.configmap.yaml  40-expense-api.secret.yaml  50-expense-api.hpa.yaml  60-expense-api.ingress.yaml  80-dependencies.postgres.yaml  81-dependencies.redis.yaml  82-dependencies.mongo.yaml  83-dependencies.kafka.yaml
manifests/observability/: LABELS.md  cluster-bootstrap.md  expense-api-alertmanagerconfig.yaml  expense-api-dashboard-configmap.yaml  expense-api-deployment-patch.yaml  expense-api-prometheusrule.yaml  expense-api-servicemonitor.yaml
otelcol/: config.yaml
scripts/: dev.md  k8s-smoke.sh  k8s-up.sh  observability-apply.sh  observability-smoke.sh  sam-deploy.sh  sam-smoke.sh  smoke.sh
slo/: expense-api.sloth.yaml
(+168 files in other folders)
