[project]
name = "expense-agent-svc"
version = "0.1.0"
description = "W7D5 multi-agent orchestration service: LangGraph supervisor over expense-ai RAG and the expense-mcp-server MCP surface."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "UptimeCrew Expense Team", email = "pranav_kuchibhotla@intuit.com" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.34",
    "instructor>=1.4",
    "mcp>=1.2",
    "langgraph>=0.2.40",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "langsmith>=0.1.80",
    "structlog>=24.1",
    "tenacity>=8.3",
    "ragas>=0.2",
    "expense-ai",
    "expense-mcp-server",
]

[project.scripts]
expense-agent-svc = "expense_agent_svc.app:run"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "testcontainers[postgres]>=4.7",
]

[tool.uv.sources]
expense-ai = { path = "../expense-ai", editable = true }
expense-mcp-server = { path = "../expense-mcp-server", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_agent_svc"]

[tool.mypy]
strict = true
python_version = "3.12"
# Adapter boundaries return heterogenous JSON payloads (MCP tool results,
# checkpoint dicts, LangSmith run metadata) that genuinely need
# ``dict[str, Any]``. Keep every other strict-mode flag on.
disallow_any_explicit = false
warn_return_any = true
warn_unused_ignores = true
files = ["src", "tests", "evals"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx", "respx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langsmith",
    "langsmith.*",
    "langgraph",
    "langgraph.*",
    "langgraph_checkpoint_postgres",
    "langgraph_checkpoint_postgres.*",
    "testcontainers",
    "testcontainers.*",
    "mcp",
    "mcp.*",
    "instructor",
    "instructor.*",
    "ragas",
    "ragas.*",
    "anthropic",
    "anthropic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["expense_ai", "expense_ai.*", "expense_mcp_server", "expense_mcp_server.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"src/expense_agent_svc/scripts/*" = ["T20"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "strict"
markers = [
    "slow: slower tests",
    "external: tests that require external SaaS credentials",
    "docker: tests that require Docker / Testcontainers",
    "integration: cross-service integration tests",
]

[tool.coverage.run]
branch = true
source = ["src/expense_agent_svc"]
omit = [
    # The default runtime factory owns AsyncPostgresSaver + MCP SSE +
    # Anthropic clients; it can only be exercised with a real Postgres,
    # a real MCP server, and a valid Anthropic key present at the same
    # time. Its behavior is proven by source-level assertions in
    # ``tests/test_runtime.py`` and by the checkpointer integration
    # test that exercises the same AsyncPostgresSaver lifecycle
    # pattern. Excluding here matches the sibling expense-mcp-server
    # convention for transport entry points.
    "src/expense_agent_svc/runtime.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
