[project]
name = "expense-ai"
version = "0.1.0"
description = "Python sidecar for the UptimeCrew expense-tracking domain."
requires-python = ">=3.12"
readme = "PYTHON.md"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "numpy>=2.0",
    "pandas>=2.2",
    "sentence-transformers>=3.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "langsmith>=0.1.80",
    "langchain-text-splitters>=0.2",
    "langchain-core>=0.2",
    "redis>=5.0",
]

[project.scripts]
expense-ai = "expense_ai.cli:entrypoint"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "ragas>=0.1.10",
    "great-expectations>=0.18",
    "testcontainers[postgres,redis]>=4.7",
    "apache-airflow>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_ai"]

[tool.mypy]
strict = true
python_version = "3.12"
disallow_any_explicit = true
warn_return_any = true
warn_unused_ignores = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx", "respx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers",
    "sentence_transformers.*",
    "pandas",
    "pandas.*",
    "pgvector",
    "pgvector.*",
    "langsmith",
    "langsmith.*",
    "ragas",
    "ragas.*",
    "testcontainers",
    "testcontainers.*",
    "datasets",
    "datasets.*",
    "langchain_text_splitters",
    "langchain_text_splitters.*",
    "langchain_core",
    "langchain_core.*",
    "airflow",
    "airflow.*",
]
ignore_missing_imports = true

# great_expectations ships py.typed but does not re-export its
# ``Expect*`` classes from the ``expectations`` namespace at the type
# level, so strict mypy chokes on the officially recommended
# ``from great_expectations import expectations as gxe`` idiom. Follow-
# imports=skip keeps us honest about the modules we own while letting
# the GX validation suite stay readable.
[[tool.mypy.overrides]]
module = ["great_expectations", "great_expectations.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"src/expense_ai/cli.py" = ["T20"]
"src/expense_ai/scripts/*" = ["T20"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "strict"
markers = [
    "slow: slower tests that may take multiple seconds",
    "external: tests that require external SaaS credentials (LangSmith, Anthropic)",
    "docker: tests that require Docker / Testcontainers",
    "redis: tests that require a Redis instance (Testcontainers or local)",
]

[tool.coverage.run]
branch = true
source = ["src/expense_ai"]
omit = [
    # External-only script; covered by CI env-guarded run, not unit tests.
    "src/expense_ai/scripts/assert_langsmith_run_visible.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
