[project]
name = "expense-mcp-server"
version = "0.1.0"
description = "FastMCP server publishing UptimeCrew expense Spring endpoints and the expense-ai RAG pipeline (W7D4)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "UptimeCrew Expense Team", email = "pranav_kuchibhotla@intuit.com" }
]
dependencies = [
    "mcp>=1.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "langsmith>=0.1.80",
    "structlog>=24.1",
    "expense-ai",
    "pyjwt[crypto]>=2.8",
]

[project.scripts]
expense-mcp-server = "expense_mcp_server.transports.stdio:main"
expense-mcp-server-sse = "expense_mcp_server.transports.sse:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "testcontainers[postgres]>=4.7",
]

[tool.uv.sources]
expense-ai = { path = "../expense-ai", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_mcp_server"]

[tool.mypy]
strict = true
python_version = "3.12"
# We keep ``strict = true`` and every other strict-mode flag on, but flip
# ``disallow_any_explicit`` off. A handful of adapter boundaries (JSON
# payloads from upstream Spring, the permissive expense-ai RAG return
# type) genuinely need ``dict[str, Any]``; forbidding it would push us
# into ``cast(...)`` towers that hide real type errors instead of
# surfacing them.
disallow_any_explicit = false
warn_return_any = true
warn_unused_ignores = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx", "respx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langsmith",
    "langsmith.*",
    "testcontainers",
    "testcontainers.*",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["expense_ai", "expense_ai.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"src/expense_mcp_server/scripts/*" = ["T20"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
markers = [
    "slow: slower tests",
    "external: tests that require external SaaS credentials",
    "docker: tests that require Docker / Testcontainers",
    "integration: cross-service integration tests",
]

[tool.coverage.run]
branch = true
source = ["src/expense_mcp_server"]
omit = [
    # Transport entry points are exercised by the stdio smoke test through a
    # subprocess; the process-boundary lines are not credited to coverage.
    "src/expense_mcp_server/transports/stdio.py",
    "src/expense_mcp_server/transports/sse.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
